@@ -4,42 +4,68 @@ import com.google.gson.JsonObject;
 import org.apache.http.*;
 import org.apache.http.client.CookieStore;
 import org.apache.http.client.HttpClient;
+import org.apache.http.client.config.RequestConfig;
 import org.apache.http.client.methods.HttpGet;
 import org.apache.http.client.methods.HttpPost;
 import org.apache.http.client.protocol.HttpClientContext;
 import org.apache.http.cookie.Cookie;
 import org.apache.http.entity.ContentType;
 import org.apache.http.entity.StringEntity;
+import org.apache.http.impl.client.BasicAuthCache;
 import org.apache.http.impl.client.BasicCookieStore;
-import org.apache.http.impl.client.HttpClients;
+import org.apache.http.impl.client.HttpClientBuilder;
+import org.apache.http.impl.client.LaxRedirectStrategy;
 import org.apache.http.util.EntityUtils;
 import org.jsoup.Jsoup;
 import org.jsoup.nodes.Document;
 
 import java.io.*;
 import java.net.URLEncoder;
-import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Date;
 import java.util.List;
 
 /*Preserves session across post and get request*/
+
+//TODO properly release connection. Program hangs if setMaxConnPerRoute(100000) is not set
 public class HTTPHandler {
     HttpClientContext context;
     CookieStore cookieStore;
+    List<Header> defaultHeaders;
+    HttpClient client;
 
-    public HTTPHandler() {
-        //RequestConfig globalConfig = RequestConfig.custom().setCookieSpec(CookieSpecs.DEFAULT).build();
+    public HTTPHandler(List<Header> defaultHeaders) {
+        HttpHost proxy = new HttpHost("10.120.30.19", 8080, "http");
+        RequestConfig globalConfig = RequestConfig
+                .custom()
+                .setProxy(proxy)
+                .setCircularRedirectsAllowed(false)
+                .build();
         cookieStore = new BasicCookieStore();
         context = HttpClientContext.create();
         context.setCookieStore(cookieStore);
+        context.setRequestConfig(globalConfig);
+        context.setAuthCache(new BasicAuthCache());
+        this.defaultHeaders = defaultHeaders;
+        client = createDefaultClient();
+    }
+    private HttpClient getDefaultClient (){
+        return client;
     }
 
+    private HttpClient createDefaultClient (){
+        return HttpClientBuilder.create()
+                .setUserAgent("Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:60.0) Gecko/20100101 Firefox/60.0")
+                .setRedirectStrategy(new LaxRedirectStrategy())
+                .setDefaultHeaders(defaultHeaders)
+                .setMaxConnPerRoute(100000)
+                .build();
+    }
 
     public HttpResponse doGet(String url,List<Header> headers) {
         try {
-            HttpClient httpclient = HttpClients.createDefault();
+            HttpClient httpclient = getDefaultClient();
             HttpGet httpGet = new HttpGet(url);
             headers.forEach(httpGet::addHeader);
             logRequest(httpGet);
@@ -61,12 +87,12 @@ public class HTTPHandler {
         }
 
         //try (InputStream inputStream = entity.getContent()) {
-            long len = entity.getContentLength();
-            if (len != -1 && len < Integer.MAX_VALUE) {
-                return EntityUtils.toString(entity);
-            } else {
-                return convertInputStreamToString(entity.getContent());
-            }
+        long len = entity.getContentLength();
+        if (len != -1 && len < Integer.MAX_VALUE) {
+            return EntityUtils.toString(entity);
+        } else {
+            return convertInputStreamToString(entity.getContent());
+        }
         //}
 
     }
@@ -86,21 +112,6 @@ public class HTTPHandler {
 
     }
 
-    public static String getSamlRequestForm(String string) {
-        Document jDoc = Jsoup.parse(string);
-        return jDoc.select("input[name=SAMLRequest]").first().val();
-    }
-
-    public static String getSamlResponseForm(String string) {
-        Document jDoc = Jsoup.parse(string);
-        return jDoc.select("input[name=SAMLResponse]").first().val();
-    }
-
-    public static String getRelayState(String string) {
-        Document jDoc = Jsoup.parse(string);
-        return jDoc.select("input[name=RelayState]").first().val();
-    }
-
     private static String beautifyCookies(CookieStore cookies){
         List<Cookie> list = cookies.getCookies();
         StringBuilder builder = new StringBuilder();
@@ -108,11 +119,6 @@ public class HTTPHandler {
             builder.append(cookie.toString()).append(System.lineSeparator());
         }
         return builder.toString();
-    }
-
-    public String getVerificationToken(String string) {
-        Document jDoc = Jsoup.parse(string);
-        return jDoc.select("input[name=__RequestVerificationToken]").first().val();
     }
 
     private void logRequest(HttpPost post){
@@ -131,7 +137,7 @@ public class HTTPHandler {
         return builder.toString();
     }
 
-    private static String toURLEncodedString(ArrayList<NameValuePair> list, boolean isData) {
+    private static String toURLEncodedString(ArrayList<NameValuePair> list, boolean isData,boolean encode) {
         if (list == null || list.isEmpty())
             return "";
 
@@ -140,8 +146,22 @@ public class HTTPHandler {
 
         for (NameValuePair item : list) {
 
-            String key = URLEncoder.encode(item.getName(), StandardCharsets.UTF_8);
-            String value = URLEncoder.encode(item.getValue(), StandardCharsets.UTF_8);
+            String key = null;
+            String value = null;
+            try {
+                if(encode){
+                    key = URLEncoder.encode(item.getName(), "UTF-8");
+                    value = URLEncoder.encode(item.getValue(), "UTF-8");
+                }
+                else{
+                    key = item.getName();
+                    value = item.getValue();
+                }
+
+            } catch (UnsupportedEncodingException e) {
+                e.printStackTrace();
+            }
+
 
             if (isFirst) {
                 builder.append(key).append("=").append(value);
@@ -159,12 +179,13 @@ public class HTTPHandler {
 
     public HttpResponse doURLEncodedPost(String url, List<Header> headers, ArrayList<NameValuePair> queryData, ArrayList<NameValuePair> data) {
         try {
-            String queryParams = toURLEncodedString(queryData, false);
-            String dataParam = toURLEncodedString(data, true);
+            String queryParams = toURLEncodedString(queryData, false,true);
+            String dataParam = toURLEncodedString(data, true,true);
 
-            HttpClient httpclient = HttpClients.createDefault();
+            HttpClient httpclient = getDefaultClient();
             HttpPost httppost = new HttpPost(url + queryParams);
-            httppost.setEntity(new StringEntity(dataParam, ContentType.APPLICATION_FORM_URLENCODED));
+            httppost.setEntity(new StringEntity(dataParam,ContentType.APPLICATION_FORM_URLENCODED));
+
             headers.forEach(httppost::addHeader);
             logRequest(httppost);
             return httpclient.execute(httppost, context);
@@ -176,9 +197,10 @@ public class HTTPHandler {
         return null;
     }
 
+
     public HttpResponse doJsonEncodedPost(String url, JsonObject params) {
         try {
-            HttpClient httpclient = HttpClients.createDefault();
+            HttpClient httpclient = getDefaultClient();
             HttpPost httppost = new HttpPost(url);
             httppost.setEntity(new StringEntity(
                     params.toString(),
@@ -222,48 +244,4 @@ public class HTTPHandler {
         return entity;
     }
 
-    public HttpResponse doURLEncodedPostWithQuestions(String url, List<Header> headers, ArrayList<NameValuePair> queryData, ArrayList<NameValuePair> data) {
-        try {
-            String queryParams = toURLEncodedStringWithQuestions(queryData, false);
-            String dataParam = toURLEncodedString(data, true);
-//            url = url+queryParams;
-            url = "";
-            HttpClient httpclient = HttpClients.createDefault();
-            HttpPost httppost = new HttpPost(url);
-            httppost.setEntity(new StringEntity(dataParam));
-            headers.forEach(httppost::addHeader);
-            logRequest(httppost);
-            return httpclient.execute(httppost, context);
-
-        } catch (IOException e) {
-            e.printStackTrace();
-        }
-
-        return null;
-    }
-
-    private String toURLEncodedStringWithQuestions(ArrayList<NameValuePair> list, boolean encode) {
-        if (list == null || list.isEmpty())
-            return "";
-
-        StringBuilder builder = new StringBuilder();
-
-        for (NameValuePair item : list) {
-            String key = item.getName();
-            String value = item.getValue();
-            if (encode) {
-                key = URLEncoder.encode(key, StandardCharsets.UTF_8);
-                value = URLEncoder.encode(value, StandardCharsets.UTF_8);
-            }
-
-
-            builder.append("?").append(key).append("=").append(value);
-
-
-        }
-
-        return builder.toString();
-
-
-    }
 }
